# cliprs

./: Cargo.toml  README.md  example-cliprs.desktop  example-cliprs.service  example-sxhkd.desktop  example-sxhkd.service  install.sh
cliprs-gtk4/: Cargo.toml
cliprs-gtk4/src/: log_manager.rs  main.rs
cliprs.service/: Cargo.toml  install.sh
cliprs.service/examples/: hello-redis.rs
cliprs.service/src/: main.rs
cliprs.service/src/clipboard_managers/: clipboard_manager.rs  mod.rs  x11_clipboard_manager.rs
cliprs.service/src/server/: mod.rs  tokio_server.rs
src/: clipboard_manager.rs  main.rs
src/clipboard_managers/: x11_clipboard_manager.rs
