[package]
name = "cliprs"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5.0"
fork = "0.1.23"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
log = "0.4.22"
simple-logging = "2.0.2"
lazy_static = "1.5.0"

[target.'cfg(unix)'.dependencies]
clipboard-master = "3.1.3"
